fix: Code improvements